// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserService - (create) /> should create a user with profile picture successfully 1`] = `
{
  "active": true,
  "bio": "This is my bio",
  "followers": 0,
  "following": 0,
  "id": "42-d-f-df4",
  "name": "John Doe",
  "profileImg": "https://example.com/profile.jpg",
  "username": "jDoe453",
}
`;

exports[`<UserService - (create) /> should create a user without profile picture successfully 1`] = `
{
  "active": true,
  "bio": "This is my bio",
  "followers": 0,
  "following": 0,
  "id": "42-d-f-df4",
  "name": "John Doe",
  "profileImg": null,
  "username": "jDoe453",
}
`;
